--- a/ShopApp/ShopApp/bin/ShopApp.dll.config
+++ b/ShopApp/ShopApp/bin/ShopApp.dll.config
@@ -62,7 +62,7 @@
     </modules>
   </system.webServer>
   <connectionStrings>
-    <add name="shopEntities" connectionString="metadata=res://*/ModelShop.csdl|res://*/ModelShop.ssdl|res://*/ModelShop.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=shop;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="shopEntities" connectionString="metadata=res://*/ModelShop.csdl|res://*/ModelShop.ssdl|res://*/ModelShop.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=shop;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
